Finalizacion JS y pantalla restante
Se realiza la pantalla de la parte hex y los apartados de js, funciona correctamente

--- a/color-flipper/hexa.html
+++ b/color-flipper/hexa.html
@@ -28,7 +28,7 @@
         </section>
     </main>
 
-    <script src="app.js"></script>
+    <script src="hexa.js"></script>
     
 </body>
 </html>
